# apple_music_rs

./: Cargo.toml  README.md
src/: lib.rs
src/apple_music/client/: auth.rs  endpoint.rs  mod.rs
