[package]
name = "apple_music_rs"
version = "0.1.0"
authors = ["Eric Mark Martin <ericmarkmartin@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "~0.4", features = ["serde"] }
jsonwebtoken = "~5"
reqwest = "~0.9.11"
serde = { version = "~1.0.0", features = ["derive"] }
serde_json = "~1.0"
